k8s/2nd-brain/linkding/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: linkding
  name: linkding
  namespace: linkding
spec:
  selector:
    matchLabels:
      app: linkding
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: linkding
    spec:
      containers:
        - name: linkding
          image: ghcr.io/sissbruecker/linkding:latest@sha256:8240a94df32d68a620b781a34691b889c2f55ae19505c07ed50aeaff6ddf52ee
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9090
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/linkding/data
              name: appdata
      restartPolicy: Always
      volumes:
        - name: appdata
          hostPath:
            path: /config/linkding
            type: DirectoryOrCreate
